--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
 </head>
 <body>
     <h1>SaiUjwal</h1>
-    <h3>Favourite Vacation Spot:Mumbai</h3>
+    <h6>Favourite Vacation Spot:Mumbai</h6>
     <p>Mumbai is huge populated city in india  and very famous for electronics,food and culture and traditions 
         either everyone have owned there bussiness so it is also called as <b>bussiness era</b> even a common poor person
         can live with in this <b>budget of lifestyle</b> and very comfortable place and many places to explore furthermore 
         have visited recently after my undergraduation.
     </p>
+
+    <hr>
+    <h3>Mumbai</h3>
+    <ol>
+        <li>Food</li>
+        <li>Museums</li>
+        <li>Water Sports</li>
+    </ol>
+
 
 </body>
 </html>
