--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     </p>
 
     <hr>
-    <h3>Mumbai</h3>
+    <h3>Activites</h3>
     <ol>
         <li>Food</li>
         <li>Museums</li>
         <li>Water Sports</li>
     </ol>
+    <ul>
+
+    </ul>
 
 
 </body>
