--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
         <li>Water Sports</li>
     </ol>
     <ul>
-
+        <li>Dishes</li>
+        <li>Vada Pav</li>
+        <li>Bhelpuri</li>
+        <li>Bombay Sandwich</li>
+        <li>Ragada</li>
+        <li>Pav Bhaji</li>
     </ul>
+
 
 
 </body>
