--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <li>Museums</li>
         <li>Water Sports</li>
     </ol>
+    <h3>Dishes</h3>
     <ul>
-        <li>Dishes</li>
         <li>Vada Pav</li>
         <li>Bhelpuri</li>
         <li>Bombay Sandwich</li>
