--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>SaiUjwal</h1>
-    <h6>Favourite Vacation Spot:Mumbai</h6>
+    <h3>Favourite Vacation Spot:Mumbai</h3>
     <p>Mumbai is huge populated city in india  and very famous for electronics,food and culture and traditions 
         either everyone have owned there bussiness so it is also called as <b>bussiness era</b> even a common poor person
         can live with in this <b>budget of lifestyle</b> and very comfortable place and many places to explore furthermore 
@@ -27,6 +27,8 @@
         <li>Ragada</li>
         <li>Pav Bhaji</li>
     </ul>
+    <a href="mystats.html">Check my Stats</a>
+
 
 
 
