--- a/mystats.html
+++ b/mystats.html
@@ -18,5 +18,17 @@
         typically growing to just under four feet in length.
     </p>
     <img src="Salmon.jpg" alt="Fish">
+
+    <hr>
+    <h3>Sports Table</h3>
+    <table>
+<tr>
+    <th>name of a sport</th>
+    <th>reason why you recommend it</th>
+    <th>how many hours in an average week</th>
+</tr>
+    </table>
+    
+
 </body>
 </html>
