--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>Bhelpuri</li>
         <li>Bombay Sandwich</li>
         <li>Ragada</li>
-        <li>Pav Bhaji</li>
+        <li>Pav Bhaji.</li>
     </ul>
     <a href="mystats.html">Check my Stats</a>
 
