--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Always be happy</title>
 </head>
 <body>
-    BONUS <link rel="stylesheet" href="C:\Users\S564579\Documents\GitHub\44563-webapps-f23-assignment3-SaiUjwal296\bonus.html">
+    BONUS <link rel="stylesheet" href="bonus.html">
     <h1>SaiUjwal</h1>
     <h3>Favourite Vacation Spot:Mumbai</h3>
     <p>Mumbai is huge populated city in india  and very famous for electronics,food and culture and traditions 
