--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Always be happy</title>
 </head>
 <body>
-    BONUS <link rel="stylesheet" href="bonus.html">
+    <a href="bonus.html">BONUS</a>
     <h1>SaiUjwal</h1>
     <h3>Favourite Vacation Spot:Mumbai</h3>
     <p>Mumbai is huge populated city in india  and very famous for electronics,food and culture and traditions 
