--- a/bonus.html
+++ b/bonus.html
@@ -6,9 +6,11 @@
 <body>
     <h1>Snake</h1>
 <p>
-    A vampier snake is a kind of snake that has special poison in its mouth. 
-    When it bites something, like a prey animal or sometimes a human, 
-    it injects this poison. This poison can hurt or even kill the thing it bites
+    A vampier snake is a kind of snake that has special poison in its mouth 
+    When it bites something, 
+    like a prey animal or sometimes a human, 
+    it injects this poison. 
+    This poison can hurt or even kill the thing it bites
 </p>
 <h3>list to provide traits for your character</h3>
 <ol>
