--- a/mystats.html
+++ b/mystats.html
@@ -17,7 +17,7 @@
         Atlantic salmon are the largest salmon species, 
         typically growing to just under four feet in length.
     </p>
-    <img src="/images/Salmon.jpg" alt="Fish">
+    <img src="images/Salmon.jpg" alt="Fish">
 
     <hr>
     <h3>Sports Table</h3>
