--- a/bonus.html
+++ b/bonus.html
@@ -19,6 +19,6 @@
     <li>It has thermal vision</li>
     <li>It can also live for long years</li>
 </ol>
-<a href="venomous-snakes.jpg"></a>
+<img src="venomous-snakes.jpg" alt="Snake">
 </body>
 </html>
