--- a/bonus.html
+++ b/bonus.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>vampier Snake</title>
+    <title>Visualization Specialist</title>
 </head>
 <body>
-    <h1>Snake</h1>
+    <h1>Specilalist</h1>
 <p>
-    A vampier snake is a kind of snake that has special poison in its mouth 
-    When it bites something, 
-    like a prey animal or sometimes a human, 
-    it injects this poison. 
-    This poison can hurt or even kill the thing it bites
+    A Visualization Specialist is like a visual storyteller,
+    they take complicated information
+    It easy to understand by creating pictures, graphs, and animations, 
+    these visuals help people see and grasp important ideas,
+    they work in different areas like science and business to make information easy, 
+    they team up with others to share insights in a way that everyone can understand. 
 </p>
-<h3>list to provide traits for your character</h3>
+<h3>list least three physical/personality traits for your character</h3>
 <ol>
-    <li>It is very dangerous and posion</li>
-    <li>It can float in water</li>
-    <li>It has thermal vision</li>
-    <li>It can also live for long years</li>
+    <li>It helps to create cool pictures and graphics in a creativity way</li>
+    <li>It seems to be stressed but it's a time long period to fix all cool stuff</li>
+    <li>They pay main attention to explian and convert information data to pictures and graphics</li>
 </ol>
-<img src="venomous-snakes.jpg" alt="Snake">
+<a href="index.html">Back to index</a>
+
 </body>
 </html>
