--- a/bonus.html
+++ b/bonus.html
@@ -19,6 +19,7 @@
     <li>It seems to be stressed but it's a time long period to fix all cool stuff</li>
     <li>They pay main attention to explian and convert information data to pictures and graphics</li>
 </ol>
+<img src="Visualistion.jpg" alt="Specialist">
 <a href="index.html">Back to index</a>
 
 </body>
