--- a/mystats.html
+++ b/mystats.html
@@ -21,7 +21,7 @@
 
     <hr>
     <h3>Sports Table</h3>
-    <table>
+    <table border ="2">
 <tr>
     <th>name of a sport</th>
     <th>reason why you recommend it</th>
