--- a/mystats.html
+++ b/mystats.html
@@ -46,6 +46,7 @@
     <hr>
     <h3>Code</h3>
     <blockquote>Site="https://css-tricks.com/snippets/wordpress/get-the-first-image-from-a-post">Get The First Image From a Post</blockquote>
+    <a href="https://css-tricks.com/snippets/wordpress/get-the-first-image-from-a-post/">Link to Code and Quoted Question</a>
     <pre>
         function catch_that_image() {
             global $post, $posts;
