--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
         <li>Bhelpuri</li>
         <li>Bombay Sandwich</li>
         <li>Ragada</li>
-        <li>Pav Bhaji.</li>
+        <li>Pav Bhaji
+          <ul>
+            <li>it is very fluffy</li>
+            <li>spicy</li>
+            <li>Afforable food</li>
+          </ul>  
+        </li>
     </ul>
     <a href="mystats.html">Check my Stats</a>
 
