--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Always be happy</title>
 </head>
+
 <body>
     <a href="bonus.html">BONUS</a>
     <h1>SaiUjwal</h1>
     <h3>Favourite Vacation Spot:Mumbai</h3>
-    <p>Mumbai is huge populated city in india  and very famous for electronics,food and culture and traditions 
-        either everyone have owned there bussiness so it is also called as <b>bussiness era</b> even a common poor person
-        can live with in this <b>budget of lifestyle</b> and very comfortable place and many places to explore furthermore 
+    <p>Mumbai is huge populated city in india and very famous for electronics,food and culture and traditions
+        either everyone have owned there bussiness so it is also called as <b>bussiness era</b> even a common poor
+        person
+        can live with in this <b>budget of lifestyle</b> and very comfortable place and many places to explore
+        furthermore
         have visited recently after my undergraduation.
     </p>
 
@@ -27,11 +31,11 @@
         <li>Bombay Sandwich</li>
         <li>Ragada</li>
         <li>Pav Bhaji
-          <ul>
-            <li>it is very fluffy</li>
-            <li>spicy</li>
-            <li>Afforable food</li>
-          </ul>  
+            <ul>
+                <li>it is very fluffy</li>
+                <li>spicy</li>
+                <li>Afforable food</li>
+            </ul>
         </li>
     </ul>
     <a href="mystats.html">Check my Stats</a>
@@ -40,5 +44,5 @@
 
 
 </body>
-</html>
 
+</html>
