--- a/mystats.html
+++ b/mystats.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html>
+
 <body>
     <h3>Interseting facts</h3>
-    <p> 
-        I am a curious and driven individual 
-        who is passionate about exploring the intersections of technology and creativity. 
+    <p>
+        I am a curious and driven individual
+        who is passionate about exploring the intersections of technology and creativity.
         With a background in computer science and a keen interest in the arts, y
-        I thrive in bridging the gap between innovative problem-solving and artistic expression. 
+        I thrive in bridging the gap between innovative problem-solving and artistic expression.
         By continuously seeking new challenge
     </p>
     <h3>Salmon Fish</h3>
     <p>
-        Salmons have sleek, streamlined bodies that typically change color throughout their lifetimes. 
-        While in freshwater, Atlantic salmon are brown and spotted. 
-        When they migrate to the ocean, they turn silvery. 
-        Atlantic salmon are the largest salmon species, 
+        Salmons have sleek, streamlined bodies that typically change color throughout their lifetimes.
+        While in freshwater, Atlantic salmon are brown and spotted.
+        When they migrate to the ocean, they turn silvery.
+        Atlantic salmon are the largest salmon species,
         typically growing to just under four feet in length.
     </p>
     <img src="images/Salmon.jpg" alt="Fish">
 
     <hr>
     <h3>Sports Table</h3>
-    <table border ="2">
-<tr>
-    <th>name of a sport</th>
-    <th>reason why you recommend it</th>
-    <th>how many hours in an average week</th>
-</tr>
-<tr>
-    <td>Badmintion</td>
-    <td>reduces the fat</td>
-    <td>3 hrs</td>   
-</tr>
-<tr>
-    <td>Cricket</td>
-    <td>Improves our concertration </td>
-    <td>4 hrs</td>
-</tr>
-<tr>
-    <td>Carrom</td>
-    <td>Improves thinking power</td>
-    <td>3 hrs</td>
-</tr>
-<tr>
-    <td>Volley Ball</td>
-    <td>bulids muscle power</td>
-    <td>2 hrs</td>
-</tr>
+    <table border="2">
+        <tr>
+            <th>name of a sport</th>
+            <th>reason why you recommend it</th>
+            <th>how many hours in an average week</th>
+        </tr>
+        <tr>
+            <td>Badmintion</td>
+            <td>reduces the fat</td>
+            <td>3 hrs</td>
+        </tr>
+        <tr>
+            <td>Cricket</td>
+            <td>Improves our concertration </td>
+            <td>4 hrs</td>
+        </tr>
+        <tr>
+            <td>Carrom</td>
+            <td>Improves thinking power</td>
+            <td>3 hrs</td>
+        </tr>
+        <tr>
+            <td>Volley Ball</td>
+            <td>bulids muscle power</td>
+            <td>2 hrs</td>
+        </tr>
     </table>
     <hr>
     <h3>Code</h3>
-    <blockquote>Cite="https://css-tricks.com/snippets/wordpress/get-the-first-image-from-a-post">Get The First Image From a Post</blockquote>
-    <a href="https://css-tricks.com/snippets/wordpress/get-the-first-image-from-a-post/">Link to Code and Quoted Question</a>
+    <blockquote>Question:Get The First Image
+        From a Post</blockquote>
+    <a href="https://css-tricks.com/snippets/wordpress/get-the-first-image-from-a-post/">Link to Code and Quoted
+        Question</a>
     <pre>
         function catch_that_image() {
             global $post, $posts;
@@ -84,4 +87,5 @@
           }
     </pre>
 </body>
+
 </html>
