--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         person
         can live with in this <b>budget of lifestyle</b> and very comfortable place and many places to explore
         furthermore
-        have visited recently after my undergraduation.
+        have visited recently after my undergraduation
     </p>
 
     <hr>
